--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -13,7 +13,7 @@
 
   /* --- Welcome Page Styles --- */
   body {
-    background-color: goldenrod;
+    background-color: lightblue;
     color: #333;
     font-family: Sans-Serif;
     line-height: 18px;
