--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,6 +1,7 @@
 @media screen {
   /* --- Reset Styles --- */
   * {
+    text-align: center;
     list-style: none;
     margin: 0;
     padding: 0;
@@ -13,11 +14,39 @@
 
   /* --- Welcome Page Styles --- */
   body {
-    background-color: lightblue;
+    background-color: gold;
     color: #333;
     font-family: Sans-Serif;
     line-height: 18px;
   }
+
+  #mainMenu {
+    margin: 10px;
+    width: 900px;
+    font-family: sans-serif;
+  }
+
+  #mainMenu li {
+    display:block;
+    width:120px;
+    float:left;
+    margin-left:2px;
+    border:1px solid #000;
+  }
+
+  #mainMenu a {
+    display:block;
+    padding:3px;
+    text-decoration:none;
+    background-color:#fff;
+    color:#009;
+  }
+
+  #mainMenu a:hover {
+    background-color:#009;
+    color:#fff;
+  }
+  
 
   .wrapper {
     background: #fff;
@@ -29,6 +58,12 @@
     padding: 2.25%; /* 18px / 800px */
     width: 85%;
   }
+  
+  .container {
+    width: 960px;
+    margin: 0 auto;
+  }
+  
 
   h1 {
     font-size: 36px;
@@ -83,33 +118,5 @@
   }
 }
 
-@media screen and (max-width: 600px) {
-  .wrapper {
-    -moz-box-shadow: none;
-    -webkit-box-shadow: none;
-    box-shadow: none;
-    width: auto;
-  }
 
-  .content, .sidebar {
-    float: none;
-    width: 100%;
-  }
 
-  .sidebar {
-    background: transparent;
-    border: none;
-    border-top: 2px solid #ccc;
-    padding: 0;
-  }
-
-  h1 {
-    font-size: 24px;
-    line-height: 36px;
-  }
-
-  h2 {
-    font-size: 18px;
-    line-height: 24px;
-  }
-}
