--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -17,8 +17,9 @@
   
   <div class="container">
     
-    <header style="text-align:center">
-          <ul id="mainMenu">
+    <header>
+    <nav >
+          <ul  id="mainMenu">
             <li><a href="/">Home</a></li>
             <% if logged_in? %>
               <li><a href="/goals">Goals</a></li>
@@ -28,17 +29,16 @@
               <li><a href="/signup">Signup</a></li>
             <% end %>
           </ul>
-      </nav>
-      
-      <div id="logo"> 
+   </nav><br>
+   
+    </header>
+    <div style='text-align:center' id="logo"> 
         <% if logged_in? %>
           <a href="/goals/new"><button type="button" id="new_goal_button">New Goal</button></a>
         <% else %>
           <h1>Golden Goals</h1>
         <% end %>
       </div><!-- logo -->
-      
-    </header>
     <div class="wrapper">
 
         <%= yield %>
