--- a/app/views/users/failure.erb
+++ b/app/views/users/failure.erb
@@ -1,3 +1,3 @@
-<h1>Missed Goal Error</h1>
-<p>We hope to help you accomplish your goals! </p>
-<p>However, there was something wrong with your information. Please return to the <a href="/"> home</a> page and try again.</p>
+<h1 style='color: red'> User Error</h1>
+<p><em>We hope to help you accomplish your goals! </em></p>
+<p><em>However, there was something wrong with your information. Please use the menu bar above to properly login or sign up.</em></p>
