--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <header><img src="images/corneal-small.png" class="img-responsive main-image"></header>
   <div class="col-md-8 col-md-offset-2">
-    <h2>Sinatra Template Default Page</h2>
+    <h1>Welcome to Golden Goals</h1>
 
     <div class="content">
       <p>Welcome to the Sinatra Template! If you're seeing this page, then everything is working
