--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,7 +1,6 @@
 @media screen {
   /* --- Reset Styles --- */
   * {
-    text-align: center;
     list-style: none;
     margin: 0;
     padding: 0;
@@ -20,33 +19,41 @@
     line-height: 18px;
   }
 
+
   #mainMenu {
+    text-align:center;
     margin: 10px;
     width: 900px;
     font-family: sans-serif;
   }
 
   #mainMenu li {
-    display:block;
+    display:inline-block;
     width:120px;
-    float:left;
     margin-left:2px;
     border:1px solid #000;
   }
-
+  
   #mainMenu a {
     display:block;
     padding:3px;
     text-decoration:none;
     background-color:#fff;
-    color:#009;
+    color:gold;
   }
 
   #mainMenu a:hover {
-    background-color:#009;
+    background-color:gold;
     color:#fff;
   }
+
+  #new_goal_button {
+    width:100px;
+  }
   
+  .formfield * {
+    vertical-align: middle;
+  }
 
   .wrapper {
     background: #fff;
@@ -66,6 +73,7 @@
   
 
   h1 {
+    text-align: center;
     font-size: 36px;
     line-height: 54px;
   }
