--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -36,7 +36,7 @@
         <% if logged_in? %>
           <a href="/goals/new"><button type="button" id="new_goal_button">New Goal</button></a>
         <% else %>
-          <h1>Golden Goals</h1>
+          <h1>Welcome to Golden Goals!</h1>
         <% end %>
       </div><!-- logo -->
     <div class="wrapper">
