--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -48,12 +48,28 @@
   }
 
   #new_goal_button {
+    background-color: black;
     width:100px;
+    font-family: sans-serif;
+    color: gold;
   }
   
   .formfield * {
     vertical-align: middle;
   }
+
+  div.welcome {
+    text-align: center;
+    border: 1px solid #000;
+    height: 100px;
+    padding: 10px 0;
+}
+
+div.welcome p {
+    display: inline-block;
+    text-align: left;
+}
+
 
   .wrapper {
     background: #fff;
@@ -63,8 +79,13 @@
     margin: 16px auto;
     max-width: 960px;
     padding: 2.25%; /* 18px / 800px */
-    width: 85%;
+    width: 95%;
   }
+
+  .content {
+    float: none;
+    width: 90%;
+}
   
   .container {
     width: 960px;
@@ -98,22 +119,6 @@
     overflow: hidden;
   }
 
-  .content {
-    float: left;
-    width: 60%; /* 480px / 800px */
-  }
-
-  .sidebar {
-    background: #eee;
-    border: 1px solid #ccc;
-    float: right;
-    padding: 2.08333333333%; /* 5px / 240px */
-    width: 30%; /* 240px / 800px */
-  }
-
-  .sidebar ul {
-    font-size: 14px;
-  }
 
   .branding {
     clear: both;
