--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -22,7 +22,7 @@
           <ul  id="mainMenu">
             <li><a href="/">Home</a></li>
             <% if logged_in? %>
-              <li><a href="/goals">Goals</a></li>
+              <li><a href="/goals">Golden Goals</a></li>
               <li><a href="/logout">Logout</a></li>
             <% else %>
               <li><a href="/login">Login</a></li>
