--- a/app/views/users/welcome.erb
+++ b/app/views/users/welcome.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <header> 
   <p style="text-align:center;"><img src="https://www.transparentpng.com/thumb/gold-medal/gold-medal-png-transparent-image--1.png" width="300" height="200" class="center" alt="gold medal png transparent image @transparentpng.com"></p></header>
-  <div class="welcome">
+  <div >
    
 
     <div class="content">
