--- a/app/views/users/welcome.erb
+++ b/app/views/users/welcome.erb
@@ -5,7 +5,7 @@
    
 
     <div class="content">
-      <p style="text-align:center;"> A golden goal is a goal to decide the winner of a match in which scores are equal at the end of normal time. It is a type of sudden death, but we're using golden goals as the goals you hope to accomplish throughout life or right now! </p>
+      <p style="text-align:center;"> A golden goal is a goal to decide the winner of a match in which scores are equal at the end of normal time. It is a type of sudden death, but we're using golden goals as the goals you hope to accomplish to win your life back during hard times or otherwise! </p>
       <p style="text-align:center;">  “By recording your dreams and goals on paper, you set in motion the process of becoming the person you most want to be. Put your future in good hands—your own.” —Mark Victor Hansen </p>
       <h2 style="text-align:center;"> So how do I set a golden goal? </h2>
     <p> Golden Goals must have a <em>title </em> and <em>status</em>, to know if you've completed the goals or you're half-way there. You define the status of the goal. You must also have a <em>motivation</em> for completing the goal
