--- a/app/views/goals/edit.erb
+++ b/app/views/goals/edit.erb
@@ -1,4 +1,4 @@
-<h1>Edit Goal: <%= @goal.title.capitalize %></h1>
+<h1>Edit Goal: <%= @goal.title.titlecase %></h1>
 
 <form action="/goals/<%= @goal.slug %>" method="POST">
   <input type="hidden" name="_method" value="PATCH">
